[bumpversion]
current_version = 0.0.0
commit = True
tag = False
message = Bump up to version {new_version}.

[metadata]
description-file = README.md

[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 100
exclude = mistune
select = E,F,W
ignore = E123,E126,E203,E226,E241,E704,W503,W504

[bumpversion:file:setup.py]

[bumpversion:file:src/microlibs/version.py]
